Contract Configurator 1.7.0
- New DialogBox behaviour for creating rich text dialog boxes with images.
- New CopyCraftFile behaviour to reward a player with a craft file.
- New RecoverVessel parameter.
- Support in WaypointGenerator for underwater waypoints.
- Improved casting between string and VesselIdentifier (thanks Nori).
- Made ChageVesselOwnership onState values consistent with other behaviours.
- Added Crawlerway into list of KSC biomes for contracts (thanks Rokanov).
- Fixed issue with grandparent contract groups not being recognized properly for experssions (thanks Rokanov).

Contract Configurator 1.6.6
- Fixed exception in Science sub-system (happens in latest FieldResearch release).
- Added additional check conditions for ReturnHome (thanks Lewtz and Jirnsum).
- Fixed another rare exception when removing a planet pack (thanks Hlaford).
- Fixed exception when recovering a vessel completes a contract (thanks AccidentalDisassembly).

Contract Configurator 1.6.5
- Fix some parsing issues with the Duration class (thanks Nori).
- Re-did fix to exception in ContractVesselTracker.
- Fixed rare exception when removing a planet pack (thanks AlonzoTG).
- Added support in SpawnVessel for spawning a vessel from a single part (a bit buggy, read caveats in documentation).
- Improved SpawnVessel validation (thanks 5thHorseman).
- Fixed issues with parsing identifiers with trailing spaces (thanks 5thHorseman).
- Minor bug fixes.

Contract Configurator 1.6.4
- Workaround for crash issue when parsing some ternary expressions in contracts.
- ContractPreLoader improvements, better handling of autoAccept contracts (thanks NathanKell).
- Check parameter state for some parameters on contract acceptance (fixes issues with CapCom and autoAccept contracts).
- Contract Configurator now automatically reloaded when doing a module manager reload (thanks sarbian).
- Enhancements to ExperimentalPart to allow finer control over when parts are locked/unlocked.