@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BehaviourFactory\AwardExperienceFactory.cs" />
     <Compile Include="BehaviourFactory\ChangeVesselOwnershipFactory.cs" />
+    <Compile Include="BehaviourFactory\DestroyVesselFactory.cs" />
     <Compile Include="BehaviourFactory\DialogBoxFactory.cs" />
     <Compile Include="BehaviourFactory\CopyCraftFileFactory.cs" />
     <Compile Include="BehaviourFactory\MessageFactory.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="BehaviourFactory\WaypointGeneratorFactory.cs" />
     <Compile Include="BehaviourFactory\SpawnKerbalFactory.cs" />
     <Compile Include="ContractBehaviour\AwardExperience.cs" />
+    <Compile Include="ContractBehaviour\DestroyVessel.cs" />
     <Compile Include="ContractBehaviour\TriggeredBehaviour.cs" />
     <Compile Include="ContractBehaviour\ChangeVesselOwnership.cs" />
     <Compile Include="ContractBehaviour\DialogBox.cs" />
