@@ -1,6 +1,7 @@
 Contract Configurator 1.7.0
 - New DialogBox behaviour for creating rich text dialog boxes with images.
 - New CopyCraftFile behaviour to reward a player with a craft file.
+- new DestroyVessel behaviour to destroy a vessel.
 - New RecoverVessel parameter.
 - Support in WaypointGenerator for underwater waypoints.
 - Improved casting between string and VesselIdentifier (thanks Nori).
